--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <script defer="defer" src="/static/js/main.5ba10332.js"></script>
-    <link href="/static/css/main.3ee9ed7c.css" rel="stylesheet">
-</head>
-
-<body><noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/to-do-app/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/to-do-app/logo192.png"/><link rel="manifest" href="/to-do-app/manifest.json"/><title>React App</title><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"><script defer="defer" src="/to-do-app/static/js/main.5ba10332.js"></script><link href="/to-do-app/static/css/main.8e3a03ab.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
